Fix slider buttons overflow bug

--- a/src/component/SliderButtons/SliderButtons.style.scss
+++ b/src/component/SliderButtons/SliderButtons.style.scss
@@ -10,6 +10,7 @@
   z-index: 1;
   transform: translateY(-50%);
   pointer-events: none;
+  overflow: hidden;
 
   button {
     opacity: 0.7;
